git-svn-id: file:///var/tmp/data/svnroot/Parse-DMIDecode@772 610ec7d1-1c12-4784-ad90-13d12571cf29

--- a/README
+++ b/README
@@ -5,14 +5,33 @@ SYNOPSIS
      use strict;
      use Parse::DMIDecode ();
      
- # Create an interface object
-     my $smbios = new Parse::DMIDecode;
+ my $dmi = new Parse::DMIDecode;
+     $dmi->probe;
+     
+ printf("System: %s, %s",
+             $dmi->keyword("system-manufacturer"),
+             $dmi->keyword("system-product-name"),
+         );
 
 DESCRIPTION
+    This module provides an OO interface to SMBIOS information through the
+    *dmidecode* command which is known to work under a number of Linux, BSD
+    and BeOS variants.
+
 METHODS
   new
+     my $dmi = Parse::DMIDecode->new(dmidecode => "/usr/sbin/dmidecode");
+
   probe
+     $dmi->probe;
+
   parse
+     my $raw = `dmidecode`;
+     $dmi->parse($raw);
+
+  keyword
+     my $ = $dmi->keyword("system-serial-number");
+
 SEE ALSO
     examples/*.pl, <http://www.nongnu.org/dmidecode/>,
     <http://linux.dell.com/libsmbios/>,
