--- a/README
+++ b/README
@@ -56,7 +56,9 @@ METHODS
   get_handles
      use Parse::DMIDecode::Constants qw(@TYPES);
      
- for my $handle ($decoder->get_handles( group => "memory" )) {
+ # Available groups to query: bios, system, baseboard,
+     #    chassis, processor, memory, cache, connector, slot
+     for my $handle ($decoder->get_handles( group => "memory" )) {
          printf(">> Found handle at %s (%s):\n%s\n",
                  $handle->address,
                  $TYPES[$handle->dmitype],
