git-svn-id: file:///var/tmp/data/svnroot/Parse-DMIDecode@808 610ec7d1-1c12-4784-ad90-13d12571cf29

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Version 0.02 - 21th October 2006
+Version 0.02 - 22th October 2006
     + Added better support for older versions of dmidecode
       binary output parsing.
     + Improved examples/test.pl.
@@ -7,6 +7,11 @@ Version 0.02 - 21th October 2006
     + Allow get_handles() method to be called without any
       qualifying paramaters so to return *All* handle
       objects.
+    + Added description() method to handle objects.
+    + Added parsed_structures() method to handle objects.
+    + Improved parsing inside handle objects to return
+      multiple handle objects where appropriate to allow
+      easier access to unique data pairs.
 
 Version 0.01 - 19th October 2006
     + Pre-release.
