git-svn-id: file:///var/tmp/data/svnroot/Parse-DMIDecode@955 610ec7d1-1c12-4784-ad90-13d12571cf29

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+Version 0.03 - 26th February 2007
+    + Removed depencancy on Scalar::Util.
+
 Version 0.02 - 22th October 2006
     + Added better support for older versions of dmidecode
       binary output parsing.
