--- a/Changes
+++ b/Changes
@@ -1,3 +1,13 @@
+Version 0.04 - 2nd March 2007
+    + Added Parse::DMIDecode::Examples POD file containing
+      a small selection of useful code examples.
+
+    + Changed Build.PL to be more paranoid defaulting
+      to no while using $build->y_n to work around
+      potential removal of expected method functionality.
+
+    + Added README2.
+
 Version 0.03 - 26th February 2007
     + Removed depencancy on Scalar::Util.
 
