--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@ Version 0.04 - 2nd March 2007
       to no while using $build->y_n to work around
       potential removal of expected method functionality.
 
-    + Added README2.
+    + Added complain.txt.
 
 Version 0.03 - 26th February 2007
     + Removed depencancy on Scalar::Util.
