--- a/lib/Parse/DMIDecode/Examples.pod
+++ b/lib/Parse/DMIDecode/Examples.pod
@@ -33,25 +33,25 @@ Parse::DMIDecode::Examples - Examples using Parse::DMIDecode::Examples
  use strict;
  use Parse::DMIDecode qw();
  
- my $dmi = Parse::DMIDecode->new( nowarnings => 1);
+ my $dmi = Parse::DMIDecode->new( nowarnings => 1 );
  $dmi->probe;
  
  my $physical_cpus = 0;
- for my $handle ($decoder->get_handles(group => 'processor')) {
-     my $type = $handle->keyword('processor-type') || '';
+ for my $handle ($decoder->get_handles(group => "processor")) {
+     my $type = $handle->keyword("processor-type") || "";
      next unless $type =~ /Central Processor/i;
-     my $status = $handle->keyword('processor-status') || '';
+     my $status = $handle->keyword("processor-status") || "";
  
-     # check the status of the cpu
-     if (!($status =~ /Unpopulated/) ) {
+     # Check the status of the cpu
+     if ($status !~ /Unpopulated/i) {
          $physical_cpus++;
      }
  }
  
  printf("There %s %d %s in this machine.\n",
-         ($physical_cpus == 1 ? 'is' : 'are'),
+         ($physical_cpus == 1 ? "is" : "are"),
          $physical_cpus,
-         ($physical_cpus == 1 ? 'CPU' : 'CPUs'),
+         ($physical_cpus == 1 ? "CPU" : "CPUs"),
      );
 
 =head1 COPYRIGHT
