git-svn-id: file:///var/tmp/data/svnroot/Parse-DMIDecode@1045 610ec7d1-1c12-4784-ad90-13d12571cf29

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Version 0.04 - 19th March 2007
+    + Fixed a few typos in the POD.
+
+
 Version 0.03 - 11th March 2007
     + Added Parse::DMIDecode::Examples POD file containing
       a small selection of useful code examples.
